[gd_scene load_steps=9 format=3 uid="uid://tq6k262qdwhh"]

[ext_resource type="Texture2D" uid="uid://s5rndoki10bj" path="res://textures/Green.png" id="1_15xw4"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_aop3d"]
[ext_resource type="PackedScene" uid="uid://daplqh8flmap5" path="res://LEVELS/level_1.tscn" id="2_hxdgq"]
[ext_resource type="PackedScene" uid="uid://dcaqpmvogjoc4" path="res://scenes/optionsMenu/options_menu.tscn" id="3_sf0p5"]
[ext_resource type="AudioStream" uid="uid://cp0mfmnefk8wf" path="res://audio/music/background.mp3" id="5_rlfjc"]

[sub_resource type="GDScript" id="GDScript_5v0f3"]
script/source = "extends VBoxContainer

@export var sceneToLoad : PackedScene
@export var optionsMenu : PackedScene

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_play_button_pressed():
	get_tree().change_scene_to_packed(sceneToLoad)


func _on_options_button_pressed():
	var optionsMenuInstance = optionsMenu.instantiate()
	get_tree().root.get_node(\"MainMenu\").add_child(optionsMenuInstance)


func _on_quit_button_pressed():
	get_tree().quit()
"

[sub_resource type="SystemFont" id="SystemFont_8qy5u"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_jigwn"]
font_names = PackedStringArray("Impact")

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aop3d")

[node name="background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_15xw4")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="menu_title" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60
script = SubResource("GDScript_5v0f3")
sceneToLoad = ExtResource("2_hxdgq")
optionsMenu = ExtResource("3_sf0p5")

[node name="title_separator" type="Control" parent="MarginContainer/menu_title"]
layout_mode = 2

[node name="game_name" type="Label" parent="MarginContainer/menu_title"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_8qy5u")
theme_override_font_sizes/font_size = 64
text = "NINJA FROG"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="buttons_containerH" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="buttons_containerV" type="VBoxContainer" parent="MarginContainer/buttons_containerH"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="button_separator" type="Control" parent="MarginContainer/buttons_containerH/buttons_containerV"]
layout_mode = 2

[node name="play_bt" type="Button" parent="MarginContainer/buttons_containerH/buttons_containerV"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_jigwn")
theme_override_font_sizes/font_size = 50
text = "PLAY"

[node name="options_bt" type="Button" parent="MarginContainer/buttons_containerH/buttons_containerV"]
custom_minimum_size = Vector2(220, 60)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_jigwn")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"

[node name="quit_bt" type="Button" parent="MarginContainer/buttons_containerH/buttons_containerV"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_jigwn")
theme_override_font_sizes/font_size = 50
text = "QUIT"

[node name="options_menu" parent="." instance=ExtResource("3_sf0p5")]
visible = false
layout_mode = 1

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rlfjc")
volume_db = -14.0
autoplay = true
